<?php

namespace GrowthCode\DesignPatterns\Structural\Facade;

interface InstrumentInterface
{
    public function play(): string;
}
